--- a/src/Reportes/Reporte_Ventas.jrxml
+++ b/src/Reportes/Reporte_Ventas.jrxml
@@ -51,7 +51,7 @@ FROM
 		<band height="98" splitType="Stretch">
 			<image hAlign="Center">
 				<reportElement x="0" y="0" width="553" height="66" uuid="a05eff6f-baca-4fd8-8fb0-87d0b8d24a52"/>
-				<imageExpression><![CDATA["G:\\sistema de ventas tornavica Ultimo\\src\\imagenes\\Tornavica.PNG"]]></imageExpression>
+				<imageExpression><![CDATA["tornavica.PNG"]]></imageExpression>
 			</image>
 			<frame>
 				<reportElement mode="Opaque" x="3" y="66" width="553" height="32" forecolor="#000000" backcolor="#406040" uuid="e1de3e50-76cf-47c1-aacf-d10f80c11d7d"/>
@@ -79,14 +79,14 @@ FROM
 		<band height="19" splitType="Stretch">
 			<staticText>
 				<reportElement style="Column header" x="8" y="0" width="67" height="18" forecolor="#000000" uuid="239fe6bb-969f-4aba-a4fc-d8c73ba3f3d7"/>
-				<textElement verticalAlignment="Bottom">
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Codigo]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="456" y="0" width="100" height="18" forecolor="#000000" uuid="7792ef95-7960-4865-867b-1dd7dd8089a1"/>
-				<textElement verticalAlignment="Bottom">
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Autorizada Por]]></text>
@@ -107,14 +107,14 @@ FROM
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="278" y="0" width="89" height="18" forecolor="#000000" uuid="a1f9630c-170d-4ddb-9dfb-d143d37dcbc3"/>
-				<textElement verticalAlignment="Bottom">
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cant. Productos]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="367" y="0" width="79" height="18" forecolor="#000000" uuid="0bee56c4-3eeb-45a4-b3ec-c47f985abcf1"/>
-				<textElement verticalAlignment="Bottom">
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total (bsf)]]></text>
@@ -122,33 +122,49 @@ FROM
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="45" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<frame>
 				<reportElement style="Row" isPrintRepeatedValues="false" mode="Opaque" x="3" y="0" width="553" height="20" uuid="59972cf7-d5c3-4106-9e54-7082579d92a2"/>
 				<textField>
 					<reportElement x="282" y="0" width="85" height="20" uuid="d0859c67-c8cd-43f8-9103-f06996854839"/>
+					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{ventas_cantidad}]]></textFieldExpression>
 				</textField>
 				<textField>
 					<reportElement x="2" y="0" width="72" height="20" uuid="9457eec1-00f1-428d-9876-7d69b29fe9d3"/>
+					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{ventas_cod_venta}]]></textFieldExpression>
 				</textField>
 				<textField>
 					<reportElement x="194" y="0" width="84" height="20" uuid="0f147c80-79ec-4a8c-85df-7e1690a0b1a6"/>
+					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{clientes_cedula}]]></textFieldExpression>
 				</textField>
 				<textField>
 					<reportElement x="450" y="0" width="100" height="20" uuid="2eafb618-b4df-4200-9594-6a0c87efffbd"/>
+					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{usuario_nombre}]]></textFieldExpression>
 				</textField>
 			</frame>
-			<textField isBlankWhenNull="true">
-				<reportElement x="85" y="0" width="100" height="20" uuid="2dab6ffb-e5ae-4ada-a487-a217892413e4"/>
-				<textFieldExpression><![CDATA[$F{clientes_nombre_empresa} +$F{clientes_primer_nombre} + $F{clientes_primer_apellido}]]></textFieldExpression>
-			</textField>
 			<textField>
 				<reportElement x="367" y="0" width="79" height="20" uuid="111a36e3-3d3f-4ec1-a27b-a8f2e568190f"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{ventas_total}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="84" y="0" width="49" height="20" uuid="a061d979-817c-415f-a535-899307acbf4f"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{clientes_primer_nombre}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="136" y="0" width="49" height="20" uuid="d8a05b77-70ff-4701-8201-5704c65bb419"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{clientes_primer_apellido}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="85" y="0" width="100" height="20" uuid="c7cd9ee0-8a89-4fc6-92fb-0fd767d121c8"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{clientes_nombre_empresa}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
