--- a/src/Reportes/Reporte_Ventas_Consulta.jrxml
+++ b/src/Reportes/Reporte_Ventas_Consulta.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a6622fa1-389a-4a31-bc1a-4740f6efcc2e">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="22"/>
+	<property name="ireport.x" value="18"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
@@ -18,59 +18,74 @@
 	<parameter name="usuario" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[SELECT
-     ventas."cantidad" AS ventas_cantidad,
-     ventas."precio" AS ventas_precio,
-     ventas."estado" AS ventas_estado,
-     ventas."descripcion" AS ventas_descripcion,
+     clientes."primer_nombre" AS clientes_primer_nombre,
+     clientes."segundo_nombre" AS clientes_segundo_nombre,
+     clientes."primer_apellido" AS clientes_primer_apellido,
+     clientes."direccion" AS clientes_direccion,
+     clientes."telefono1" AS clientes_telefono1,
+     clientes."telefono2" AS clientes_telefono2,
+     clientes."email" AS clientes_email,
+     clientes."segundo_apellido" AS clientes_segundo_apellido,
+     clientes."nombre_empresa" AS clientes_nombre_empresa,
+     clientes."cedula" AS clientes_cedula,
+     clientes."tipo_persona" AS clientes_tipo_persona,
+     clientes."cod_cliente" AS clientes_cod_cliente,
+     ventas."cod_cliente" AS ventas_cod_cliente,
      ventas."cod_venta" AS ventas_cod_venta,
+     ventas."tipo_de_pago" AS ventas_tipo_de_pago,
      ventas."responsable" AS ventas_responsable,
-     ventas."cliente" AS ventas_cliente,
-     ventas."cedula" AS ventas_cedula,
      ventas."fecha" AS ventas_fecha,
-     ventas."total" AS ventas_total
+     ventas."cantidad" AS ventas_cantidad,
+     ventas."total" AS ventas_total,
+     ventas."descuento" AS ventas_descuento,
+     ventas."descripcion" AS ventas_descripcion
 FROM
-     "public"."ventas" ventas
+     "public"."clientes" clientes INNER JOIN "public"."ventas" ventas ON clientes."cod_cliente" = ventas."cod_cliente"
 WHERE
      fecha = '$P!{Fecha}']]>
 	</queryString>
-	<field name="ventas_cantidad" class="java.math.BigDecimal"/>
-	<field name="ventas_precio" class="java.lang.Float"/>
-	<field name="ventas_estado" class="java.lang.String"/>
-	<field name="ventas_descripcion" class="java.lang.String"/>
+	<field name="clientes_primer_nombre" class="java.lang.String"/>
+	<field name="clientes_segundo_nombre" class="java.lang.String"/>
+	<field name="clientes_primer_apellido" class="java.lang.String"/>
+	<field name="clientes_direccion" class="java.lang.String"/>
+	<field name="clientes_telefono1" class="java.lang.Long"/>
+	<field name="clientes_telefono2" class="java.lang.Long"/>
+	<field name="clientes_email" class="java.lang.String"/>
+	<field name="clientes_segundo_apellido" class="java.lang.String"/>
+	<field name="clientes_nombre_empresa" class="java.lang.String"/>
+	<field name="clientes_cedula" class="java.lang.String"/>
+	<field name="clientes_tipo_persona" class="java.lang.String"/>
+	<field name="clientes_cod_cliente" class="java.lang.Integer"/>
+	<field name="ventas_cod_cliente" class="java.lang.Integer"/>
 	<field name="ventas_cod_venta" class="java.lang.String"/>
+	<field name="ventas_tipo_de_pago" class="java.lang.String"/>
 	<field name="ventas_responsable" class="java.lang.String"/>
-	<field name="ventas_cliente" class="java.lang.String"/>
-	<field name="ventas_cedula" class="java.lang.String"/>
 	<field name="ventas_fecha" class="java.lang.String"/>
+	<field name="ventas_cantidad" class="java.math.BigDecimal"/>
 	<field name="ventas_total" class="java.lang.Float"/>
+	<field name="ventas_descuento" class="java.lang.String"/>
+	<field name="ventas_descripcion" class="java.lang.String"/>
 	<title>
 		<band height="98" splitType="Stretch">
 			<image hAlign="Center">
 				<reportElement x="0" y="0" width="553" height="66" uuid="a05eff6f-baca-4fd8-8fb0-87d0b8d24a52"/>
-				<imageExpression><![CDATA["D:\\sistema de ventas tornavica Ultimo\\src\\imagenes\\tornavica.PNG"]]></imageExpression>
+				<imageExpression><![CDATA["tornavica.PNG"]]></imageExpression>
 			</image>
 			<frame>
 				<reportElement mode="Opaque" x="3" y="66" width="553" height="32" forecolor="#000000" backcolor="#406040" uuid="e1de3e50-76cf-47c1-aacf-d10f80c11d7d"/>
-				<staticText>
-					<reportElement style="SubTitle" x="11" y="3" width="205" height="29" forecolor="#FFFFFF" uuid="07636396-daa2-4e76-8975-84f2882789d2"/>
-					<textElement>
-						<font fontName="Verdana" size="20" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Ventas Realizadas fecha:]]></text>
-				</staticText>
-				<textField>
-					<reportElement x="216" y="3" width="80" height="29" forecolor="#FFFFFF" uuid="feff0c55-35d1-435a-a0de-fa6c5cda6e8f"/>
-					<textElement verticalAlignment="Middle">
-						<font fontName="Verdana" size="10" isBold="true"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$P{Fecha}]]></textFieldExpression>
-				</textField>
 				<textField pattern="EEEEE dd MMMMM yyyy">
-					<reportElement x="404" y="12" width="144" height="20" forecolor="#FFFFFF" uuid="64a705cd-1c2c-4622-a8c5-40518f72cc4e"/>
+					<reportElement x="416" y="15" width="132" height="17" forecolor="#FFFFFF" uuid="64a705cd-1c2c-4622-a8c5-40518f72cc4e"/>
 					<textElement textAlignment="Right">
 						<font fontName="Verdana" size="12"/>
 					</textElement>
 					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="5" y="3" width="377" height="29" forecolor="#FFFFFF" uuid="81c3ec9e-2da5-44fc-bae2-8221ffaf3776"/>
+					<textElement>
+						<font size="20" isBold="true"/>
+					</textElement>
+					<textFieldExpression><![CDATA["Ventas Realizadas fecha: "+$P{Fecha}]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
@@ -129,35 +144,49 @@ WHERE
 			<frame>
 				<reportElement style="Row" isPrintRepeatedValues="false" mode="Opaque" x="0" y="1" width="553" height="20" uuid="59972cf7-d5c3-4106-9e54-7082579d92a2"/>
 				<textField>
-					<reportElement x="3" y="0" width="67" height="20" uuid="7efda362-d08d-4922-b06c-a030d027283d"/>
-					<textElement>
+					<reportElement x="6" y="0" width="67" height="20" uuid="7efda362-d08d-4922-b06c-a030d027283d"/>
+					<textElement textAlignment="Center">
 						<font fontName="Verdana" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{ventas_cod_venta}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="80" y="0" width="100" height="20" uuid="0fff5e92-9884-4183-9089-1ccc2afcef7f"/>
-					<textFieldExpression><![CDATA[$F{ventas_cliente}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement x="187" y="0" width="75" height="20" uuid="17805495-c560-4aae-a08e-44dc4bfa10dc"/>
-					<textElement textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{ventas_cedula}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement x="282" y="0" width="64" height="20" uuid="b908e244-8019-4da8-8237-8f12167c38b3"/>
+					<reportElement x="285" y="0" width="64" height="20" uuid="b908e244-8019-4da8-8237-8f12167c38b3"/>
 					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{ventas_cantidad}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="362" y="0" width="79" height="20" uuid="5ebae214-0900-4940-b870-37b4b8473d69"/>
+					<reportElement x="365" y="0" width="79" height="20" uuid="5ebae214-0900-4940-b870-37b4b8473d69"/>
 					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{ventas_total}]]></textFieldExpression>
 				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement x="189" y="0" width="76" height="20" uuid="8659257b-25d3-4a03-8891-5ec8d0bd66f6"/>
+					<textElement textAlignment="Center"/>
+					<textFieldExpression><![CDATA[$F{clientes_cedula}]]></textFieldExpression>
+				</textField>
 			</frame>
 			<textField>
-				<reportElement x="453" y="0" width="100" height="20" uuid="b43d7aa7-ac48-40c8-936c-99da7bf2822c"/>
+				<reportElement x="456" y="0" width="100" height="20" uuid="b43d7aa7-ac48-40c8-936c-99da7bf2822c"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{ventas_fecha}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="81" y="0" width="47" height="20" uuid="f617d718-313e-482a-a22e-e81f020afe07"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{clientes_primer_nombre}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="84" y="0" width="100" height="20" uuid="520d8a6d-dade-41c2-85dd-a1a80d0a1b9b"/>
+				<textElement textAlignment="Center">
+					<font isItalic="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{clientes_nombre_empresa}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="136" y="0" width="47" height="20" uuid="8bb14952-b20f-48d2-8e12-c6a211b3f877"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{clientes_segundo_nombre}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
