--- a/src/Reportes/proveedores.jrxml
+++ b/src/Reportes/proveedores.jrxml
@@ -62,7 +62,7 @@ FROM
 			</frame>
 			<image hAlign="Center">
 				<reportElement x="0" y="0" width="553" height="66" uuid="57ff114a-dd8e-4d01-878c-4e0980d95349"/>
-				<imageExpression><![CDATA["G:\\sistema de ventas tornavica Ultimo\\src\\imagenes\\Tornavica.png"]]></imageExpression>
+				<imageExpression><![CDATA["tornavica.png"]]></imageExpression>
 			</image>
 		</band>
 	</title>
